--- a/Front End/Avocat/indexAvocat.html
+++ b/Front End/Avocat/indexAvocat.html
@@ -34,6 +34,7 @@
         <li><a href="#" data-section="dossiers"><i class="fas fa-folder"></i> Dossiers</a></li>
         <li><a href="#" data-section="facturation"><i class="fas fa-euro-sign"></i> Facturation & Paiements</a></li>
         <li><a href="#" data-section="clients"><i class="fas fa-users"></i> Clients</a></li>
+        <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
 
       </ul>
     </aside>
