--- a/Front End/Client/indexClient.html
+++ b/Front End/Client/indexClient.html
@@ -28,6 +28,7 @@
         <li><a href="#" data-section="planification"><i class="fas fa-tasks"></i> Planification</a></li>
         <li><a href="#" data-section="facturation"><i class="fas fa-euro-sign"></i> Facturation & Paiements</a></li>
         <li><a href="#" data-section="dossiers"><i class="fas fa-folder-open"></i> Gestion des Dossiers</a></li>
+        <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
       </ul>
     </aside>
 
