Deconexion marche lets go

--- a/frontend/Avocat/indexAvocat.html
+++ b/frontend/Avocat/indexAvocat.html
@@ -19,7 +19,7 @@
       <a class="navbar-item" href="/">LegalConnect</a>
     </div>
     <div class="navbar-end">
-      <a class="navbar-item" href="#">Déconnexion</a>
+      <a class="navbar-item" id="deconnexion" href="#">Déconnexion</a>
     </div>
   </nav>
 
