--- a/frontend/Admin/indexAdmin.html
+++ b/frontend/Admin/indexAdmin.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tableau de bord - LegalConnect</title>
+  <title>Tableau de bord Admin - LegalConnect</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
 </head>
 <body>
   <nav class="navbar is-black">
@@ -25,18 +29,21 @@
       <ul class="menu-list p-4">
         <li><a href="#" data-section="agenda"><i class="fas fa-calendar-alt"></i> Agenda</a></li>
         <li><a href="#" data-section="rappels"><i class="fas fa-bell"></i> Rappels</a></li>
-        <li><a href="#" data-section="planification"><i class="fas fa-tasks"></i> Planification</a></li>
+        <li><a href="#" data-section="temps"><i class="fas fa-stopwatch"></i> Suivi du Temps</a></li>
+        <li><a href="#" data-section="depenses"><i class="fas fa-coins"></i> Dépenses</a></li>
+        <li><a href="#" data-section="dossiers"><i class="fas fa-folder"></i> Dossiers</a></li>
         <li><a href="#" data-section="facturation"><i class="fas fa-euro-sign"></i> Facturation & Paiements</a></li>
-        <li><a href="#" data-section="dossiers"><i class="fas fa-folder-open"></i> Gestion des Dossiers</a></li>
+        <li><a href="#" data-section="clients"><i class="fas fa-users"></i> Clients</a></li>
         <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
+
       </ul>
     </aside>
 
     <!-- Main Content -->
     <main class="column is-10 p-5" id="mainContent">
-      <h1 class="title has-text-centered">Tableau de bord Client</h1>
+      <h1 class="title has-text-centered">Tableau de bord Admin</h1>
       <section id="dashboard-sections">
-        <!-- Content will be dynamically swapped here -->
+        <!-- Content dynamique -->
       </section>
     </main>
   </div>
