--- a/frontend/connexion.html
+++ b/frontend/connexion.html
@@ -54,6 +54,10 @@
                                     <input type="radio" name="role" value="client">
                                     Client
                                 </label>
+                                <label class="radio">
+                                    <input type="radio" name="role" value="admin">
+                                    Administrateur
+                                </label>
                             </div>
                         </div>
                         <div class="field">
