--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <script src="https://athenachat.bot/chatbot/widget/tickerradar5713"></script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gestion des Dossiers - Avocat</title>
