Ajout du système de messagerie

--- a/frontend/Avocat/indexAvocat.html
+++ b/frontend/Avocat/indexAvocat.html
@@ -35,6 +35,7 @@
         <li><a href="#" data-section="facturation"><i class="fas fa-euro-sign"></i> Facturation & Paiements</a></li>
         <li><a href="#" data-section="clients"><i class="fas fa-users"></i> Clients</a></li>
         <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
+        <li><a href="#" data-section="communication"><i class="fas fa-message"></i> Messages</a></li>
 
       </ul>
     </aside>
