--- a/frontend/Client/indexClient.html
+++ b/frontend/Client/indexClient.html
@@ -29,6 +29,7 @@
         <li><a href="#" data-section="facturation"><i class="fas fa-euro-sign"></i> Facturation & Paiements</a></li>
         <li><a href="#" data-section="dossiers"><i class="fas fa-folder-open"></i> Gestion des Dossiers</a></li>
         <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
+        <li><a href="#" data-section="communication"><i class="fas fa-message"></i> Messages</a></li>
       </ul>
     </aside>
 
