Avocat : Ajout complet de la gestion des tâches et sessions (création, édition, suppression, vue détaillée, navigation contextuelle avec previousSection), affichage des documents associés dans detailsDossier.js, corrections du bouton Retour pour navigation fluide, intégration des boutons Voir pour dossiers, tâches et sessions. Backend : robustesse accrue des routes et contrôleurs tache (validation, gestion d'erreurs explicite). Aucun changement côté client ou admin.

--- a/frontend/Avocat/indexAvocat.html
+++ b/frontend/Avocat/indexAvocat.html
@@ -33,7 +33,8 @@
         <li><a href="#" data-section="facturation"><i class="fas fa-euro-sign"></i> Facturation & Paiements</a></li>
         <li><a href="#" data-section="clients"><i class="fas fa-users"></i> Clients</a></li>
         <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
-
+        <li><a href="#" data-section="taches"><i class="fas fa-tasks"></i> Tâches</a></li>
+        <li><a href="#" data-section="sessions"><i class="fas fa-clock"></i> Sessions</a></li>
       </ul>
     </aside>
 
