Ajout module Reporting & Analytics - indexAdmin.html

--- a/frontend/Admin/indexAdmin.html
+++ b/frontend/Admin/indexAdmin.html
@@ -29,12 +29,12 @@
       <ul class="menu-list p-4">
         <li><a href="#" data-section="agenda"><i class="fas fa-calendar-alt"></i> Agenda</a></li>
         <li><a href="#" data-section="rappels"><i class="fas fa-bell"></i> Rappels</a></li>
-        <li><a href="#" data-section="temps"><i class="fas fa-stopwatch"></i> Suivi du Temps</a></li>
-        <li><a href="#" data-section="depenses"><i class="fas fa-coins"></i> Dépenses</a></li>
         <li><a href="#" data-section="dossiers"><i class="fas fa-folder"></i> Dossiers</a></li>
         <li><a href="#" data-section="facturation"><i class="fas fa-euro-sign"></i> Facturation & Paiements</a></li>
         <li><a href="#" data-section="clients"><i class="fas fa-users"></i> Clients</a></li>
         <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
+        
+        <li><a href="reporting.html"><i class="fas fa-chart-bar"></i> Reporting & Analytics</a></li>
 
       </ul>
     </aside>
@@ -57,3 +57,4 @@
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
+
