Ajout Reporting & Analytics - indexAdmin.html

--- a/frontend/Admin/indexAdmin.html
+++ b/frontend/Admin/indexAdmin.html
@@ -34,6 +34,8 @@
         <li><a href="#" data-section="clients"><i class="fas fa-users"></i> Clients</a></li>
         <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
 
+        <li><a href="reporting.html"><i class="fas fa-chart-bar"></i> Reporting & Analytics</a></li>
+
       </ul>
     </aside>
 
