--- a/frontend/Admin/indexAdmin.html
+++ b/frontend/Admin/indexAdmin.html
@@ -33,7 +33,7 @@
         <li><a href="#" data-section="facturation"><i class="fas fa-euro-sign"></i> Facturation & Paiements</a></li>
         <li><a href="#" data-section="clients"><i class="fas fa-users"></i> Clients</a></li>
         <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
-
+        <li><a href="#" data-section="sessions"><i class="fas fa-clock"></i> Sessions</a></li>
         <li><a href="reporting.html"><i class="fas fa-chart-bar"></i> Reporting & Analytics</a></li> 
 
       </ul>
