Ajout de Auth par GitHub et ajout d'extension

--- a/frontend/connexion.html
+++ b/frontend/connexion.html
@@ -63,6 +63,7 @@
                         <div class="field">
                             <!-- Changed button type to "button" to prevent default form submission -->
                             <button type="button" id="connexion" class="button is-primary is-fullwidth">Se connecter</button>
+                            <button id="github-login" class="button is-link is-fullwidth" onclick="loginWithGitHub()">Se connecter avec GitHub</button>
                         </div>
                     </form>
                     <p class="has-text-centered">
