ajout de la messagerie en brrrr

--- a/frontend/Avocat/indexAvocat.html
+++ b/frontend/Avocat/indexAvocat.html
@@ -35,6 +35,7 @@
         <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
         <li><a href="#" data-section="taches"><i class="fas fa-tasks"></i> Tâches</a></li>
         <li><a href="#" data-section="sessions"><i class="fas fa-clock"></i> Sessions</a></li>
+        <li><a href="#" data-section="communication"><i class="fas fa-message"></i> Messages</a></li>
       </ul>
     </aside>
 
