--- a/frontend/Client/indexClient.html
+++ b/frontend/Client/indexClient.html
@@ -26,7 +26,7 @@
         <li><a href="#" data-section="agenda"><i class="fas fa-calendar-alt"></i> Agenda</a></li>
         <li><a href="#" data-section="rappels"><i class="fas fa-bell"></i> Rappels</a></li>
         <li><a href="#" data-section="planification"><i class="fas fa-tasks"></i> Planification</a></li>
-        <li><a href="#" data-section="dossiers"><i class="fas fa-folder-open"></i> Gestion des Dossiers</a></li>
+        <li><a href="#" data-section="dossiers"><i class="fas fa-folder-open"></i> Vos Dossiers</a></li>
         <li><a href="#" data-section="factures"><i class="fas fa-file-invoice-dollar"></i> Mes Factures</a></li>
         <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
         <li><a href="#" data-section="communication"><i class="fas fa-message"></i> Messages</a></li>
