Ajout reporting et analytics pour admin

--- a/frontend/Admin/indexAdmin.html
+++ b/frontend/Admin/indexAdmin.html
@@ -34,7 +34,7 @@
         <li><a href="#" data-section="clients"><i class="fas fa-users"></i> Clients</a></li>
         <li><a href="#" data-section="documents"><i class="fas fa-file-upload"></i> Mes Documents</a></li>
         <li><a href="#" data-section="sessions"><i class="fas fa-clock"></i> Sessions</a></li>
-        <li><a href="reporting.html"><i class="fas fa-chart-bar"></i> Reporting & Analytics</a></li> 
+        <li><a href="#" data-section="reporting"><i class="fas fa-chart-bar"></i> Reporting & Analytics</a></li> 
 
       </ul>
     </aside>
@@ -53,7 +53,8 @@
       <p>&copy; 2025 LegalConnect. Tous droits réservés.</p>
     </div>
   </footer>
-
   <script type="module" src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </body>
 </html>
