Ajout de la page de profil (profile.js) pour permettre à l'utilisateur avocat de consulter, modifier et supprimer son compte depuis le tableau de bord. - Ajout du fichier profile.js (non tracké précédemment) qui affiche les informations du profil dans un tableau, propose un bouton de modification (édition en ligne) et un bouton pour supprimer le compte. - Modifications dans indexAvocat.html, sidebar.js et main.js pour intégrer la navigation et le rendu de la page profil. - Correction d'un bug d'affichage dans detailsDossier.js (suppression d'un caractère '>' en trop dans le rendu du tableau). - Mise à jour des routes et contrôleurs backend pour la gestion des utilisateurs.
Problèmes connus :
- Toute personne authentifiée peut actuellement modifier ou supprimer n'importe quel compte utilisateur, car il n'y a pas de vérification stricte de l'identité ou du rôle côté backend (voir routes/userRoutes.js et userController.js).
- La suppression d'un compte entraîne la suppression de toutes les données associées, même si des dossiers ou tâches sont en cours, sans vérification préalable.
- Le frontend ne gère pas encore les messages d'erreur spécifiques liés à ces restrictions.

Étapes à suivre pour corriger ces problèmes :
1. Restreindre la modification et la suppression d'un compte à l'utilisateur concerné ou à un administrateur, en ajoutant un middleware de type verifySelfOrAdmin sur les routes PUT et DELETE dans userRoutes.js.
2. Ajouter dans userController.js une vérification côté backend pour empêcher la suppression d'un compte s'il existe des dossiers, tâches ou autres données en cours associés à l'utilisateur.
3. Adapter le frontend pour afficher les messages d'erreur renvoyés par ces nouvelles vérifications et informer l'utilisateur des raisons d'un refus de suppression ou modification.

--- a/frontend/Avocat/indexAvocat.html
+++ b/frontend/Avocat/indexAvocat.html
@@ -36,6 +36,7 @@
         <li><a href="#" data-section="taches"><i class="fas fa-tasks"></i> Tâches</a></li>
         <li><a href="#" data-section="sessions"><i class="fas fa-clock"></i> Sessions</a></li>
         <li><a href="#" data-section="communication"><i class="fas fa-message"></i> Messages</a></li>
+        <li><a href="#" data-section="profil"><i class="fas fa-user"></i> Profil</a></li>
       </ul>
     </aside>
 
